--- a/PDS_Final_Project.ipynb
+++ b/PDS_Final_Project.ipynb
@@ -46,19 +46,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start by importing the necessary packages. You can run the following line to ensure that all packages are installed in your environment:\n",
+    "Let's start by importing the necessary packages. Use the 'requirements.txt' file found on this repo to install the correct versions of each package.\n",
     "\n",
-    "**pip install pandas  \n",
-    "pip install tensorflow==1.15rc2**\n",
-    "\n",
-    "NOTE: As of June, 2019 Tensorflow version 2.0 is out, but I found that it still has some bugs to be worked out, so I decided to use legacy Tensorflow instead. Everything in this tutorial is compatible with version 1.15rc2, though I may update everything to use version 2.0 at a future date"
+    "NOTE: As of June, 2019 Tensorflow version 2.0 is out, but we found that it still has some bugs to be worked out, so we decided to use legacy Tensorflow instead. Everything in this tutorial is compatible with version 1.15rc2, though we may update everything to use version 2.0 at a future date"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As with all projects, we begin with our import statements. I tried to separate these imports into groups to aid the reader's understanding of why we need each particular import."
+    "As with all projects, we begin with our import statements. We tried to separate these imports into groups to aid the reader's understanding of why we need each particular import."
    ]
   },
   {
