--- a/PDS_Final_Project.ipynb
+++ b/PDS_Final_Project.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start by importing the necessary packages. Use the 'requirements.txt' file found on this repo to install the correct versions of each package.\n",
+    "Let's start by importing the necessary packages. Use the **'requirements.txt'** file found on this repo to install the correct versions of each package.\n",
     "\n",
     "NOTE: As of June, 2019 Tensorflow version 2.0 is out, but we found that it still has some bugs to be worked out, so we decided to use legacy Tensorflow instead. Everything in this tutorial is compatible with version 1.15rc2, though we may update everything to use version 2.0 at a future date"
    ]
